<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background">

    <com.riddle.common.CustomTextView
        android:id="@+id/customTextView11"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size42"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customEditText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_lock_the_answer"
        android:gravity="center"
        android:text="@string/send_mesage"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/size_text_16" />

    <com.riddle.common.CustomEditText
        android:id="@+id/customEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size124"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customEditText5"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mesage"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/size_text_14" />

    <com.riddle.common.CustomEditText
        android:id="@+id/customEditText5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size44"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customEditText4"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/size_text_14" />

    <com.riddle.common.CustomEditText
        android:id="@+id/customEditText4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size44"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customEditText2"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/size_text_14" />

    <com.riddle.common.CustomEditText
        android:id="@+id/customEditText2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size44"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout4"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/size_text_14" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size33"
        android:background="@color/colorBanerPoint">

        <com.riddle.common.CustomTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/feed_back"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/size_text_16" />

    </RelativeLayout>
</RelativeLayout>