<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackTrans"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size43"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="257dp">

        <com.riddle.common.CustomTextView
            android:id="@+id/textView11"
            android:layout_width="@dimen/size150"
            android:layout_height="@dimen/size43"
            android:layout_above="@+id/textView13"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border_button_no"
            android:gravity="center"
            android:text="@string/button_cancel"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/size_text_16" />

        <com.riddle.common.CustomTextView
            android:id="@+id/textView13"
            android:layout_width="@dimen/size150"
            android:layout_height="@dimen/size43"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_marginLeft="40dp"
            android:background="@drawable/border_button_yes"
            android:gravity="center"

            android:text="@string/button_proceed"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/size_text_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.riddle.common.CustomTextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/get_a_super_hint"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/size_text_18" />

        <com.riddle.common.CustomTextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:lineSpacingExtra="@dimen/size10"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/get_a_super_hint_content"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/size_text_14" />
    </LinearLayout>

</RelativeLayout>