<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background">

    <com.riddle.common.CustomTextView
        android:id="@+id/customTextView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size42"
        android:layout_below="@+id/textView24"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/border_lock_the_answer"
        android:gravity="center"
        android:text="@string/share_now"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/size_text_16" />

    <com.riddle.common.CustomTextView
        android:id="@+id/customTextView5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size42"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/customTextView4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_dialog_grey"
        android:gravity="center"
        android:text="@string/not_now"
        android:textColor="@color/colorStrokeQuestion"
        android:textSize="@dimen/size_text_16" />

    <com.riddle.common.CustomTextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_21"
        android:textColor="@color/colorTextWhite"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/size10"
        android:layout_marginTop="60dp"
        android:text="@string/share_riddle_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.riddle.common.CustomTextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_14"
        android:textColor="@color/colorTextWhite"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/size10"
        android:layout_marginTop="40dp"
        android:text="Two baseball teams played a game. One \n team won but no man touched base. How \n cound that be?"
        android:layout_below="@+id/textView23"
        android:layout_centerHorizontal="true" />
</RelativeLayout>